Rapid Prd/src/objects/Green_Tree_Oppy_Extension__c.object
<CustomObject>
    <description>This object has been created to capture the required field details for Green Tree Opportunity and is a related child record of opportunity used only in the case of opportunity records having record type as -Green Tree.</description>
    <fields>
        <fullName>Advance_Payoff_Date__c</fullName>
        <formula>DateValue(GTF_Funded_Date__c) +   Estimated_Days_to_Repay__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Advance Payoff Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Advance_Payoff_Date_old__c</fullName>
        <label>Advance Payoff Date_old</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Amount_Sold__c</fullName>
        <label>Amount Sold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_CC_Sales__c</fullName>
        <label>Average CC Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Gross_Sales__c</fullName>
        <label>Average Gross Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calculate_Due_Dates__c</fullName>
        <label>Calculate Due Dates</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Daily_Payment_Amount__c</fullName>
        <label>Daily Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Balance__c</fullName>
        <formula>Amount_Sold__c - ( Daily_Payment_Amount__c *( 
CASE(MOD( DateValue(GTF_Funded_Date__c)- DATE(1985,6,24),7), 
0 , CASE( MOD( Today() - DateValue(GTF_Funded_Date__c) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( Today() - DateValue(GTF_Funded_Date__c) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( Today() - DateValue(GTF_Funded_Date__c) ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( Today() - DateValue(GTF_Funded_Date__c) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( Today() - DateValue(GTF_Funded_Date__c),7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( Today() - DateValue(GTF_Funded_Date__c) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( Today() - DateValue(GTF_Funded_Date__c) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( Today() - DateValue(GTF_Funded_Date__c))/7)*5) 


))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Days_to_Repay__c</fullName>
        <formula>No_of_Payments__c /5*7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Days to Repay</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GTF_Approved_Date__c</fullName>
        <label>GTF Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GTF_Contract_Stips_Date__c</fullName>
        <label>GTF Contract/Stips Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GTF_Declined_Date__c</fullName>
        <label>GTF Declined Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GTF_Defaulted_Date__c</fullName>
        <label>GTF Defaulted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GTF_Follow_Up_Date__c</fullName>
        <label>GTF Follow Up Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GTF_Funded_Date__c</fullName>
        <label>GTF Funded Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GTF_Not_Intrested_Date__c</fullName>
        <label>GTF Not Interested Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GTF_Submitted_Date__c</fullName>
        <label>GTF Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Green_Tree_Converted_Date__c</fullName>
        <label>Green Tree Converted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>No_of_Payments__c</fullName>
        <formula>IF( Daily_Payment_Amount__c&gt;0 ,  Amount_Sold__c / Daily_Payment_Amount__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Payments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Payments_old__c</fullName>
        <label># of Payments_old</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Green_Tree</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ProductTerm__c</fullName>
        <label>Term</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Loan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Green Tree Oppy Extension</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>G{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Green Tree Oppy Extensions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>